# laser-polio-zamfara-data

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: generate_readme_plots.py
laser_polio_zamfara/: __main__.py  bootstrap.py
laser_polio_zamfara/data/: adm01_adjacency.npz  cbr_NGA.json  compiled_cbr_pop_ri_sia_underwt_africa.csv  distance_matrix_africa_adm2.h5  epi_africa_20250408.h5  epi_africa_20250421.h5  init_immunity_0.5coverage_january.h5  node_lookup.json  regions.yaml  shp_africa_low_res.gpkg  sia_historic_schedule.csv  sia_scenario_1.csv
